# ydb-mcp

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  config.example.env  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
.github/scripts/: increment_version.py
.github/workflows/: python-publish.yml  run-linters.yml  run-tests.yml
tests/: __init__.py  conftest.py  docker_utils.py  mocks.py  test_connection.py  test_customjsonencoder.py  test_handler.py  test_query.py  test_server.py
tests/integration/: conftest.py  test_authentication_integration.py  test_directory_operations.py  test_mcp_server_integration.py  test_path_operations.py  test_table_operations.py
ydb_mcp/: __init__.py  __main__.py  connection.py  handler.py  params.py  patches.py  query.py  serialization.py  server.py  tool_manager.py  tools.py
