[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ydb-mcp"
version = "0.1.4"  # AUTOVERSION
description = "Model Context Protocol server for YDB DBMS"
readme = "README.md"
authors = [
    {name = "YDB MCP Team", email = "info@ydb.tech"}
]
license = {text = "Apache 2.0"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "ydb>=3.21.0",
    "mcp>=1.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.1",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-assume>=2.4.3",
    "mypy>=1.3.0",
    "ruff>=0.11.0",
    "docker>=7.0.0",
]

[project.scripts]
ydb-mcp = "ydb_mcp.__main__:main"

[tool.ruff]
line-length = 121
target-version = "py310"

[tool.ruff.lint]
select = [
  "E",    # pycodestyle
  "F",    # pyflakes
  "I",    # isort
  # TODO: extend with more rules
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "ydb.*"
ignore_missing_imports = true